[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md-convert"
version = "0.1.0"
description = "Chuyển PDF, PDF scan, Word, Excel sang Markdown. Offline, không dùng API trả phí."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "pymupdf>=1.24",
    "mammoth>=1.8",
    "markdownify>=0.13",
    "openpyxl>=3.1",
    "watchdog>=4.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "flask>=3.0",
    # Doc file .doc doi cu qua Microsoft Word. Chi Windows.
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-docx>=1.1"]

[project.scripts]
md-convert = "mdconvert.cli:main"
md-convert-web = "mdconvert.web:main"

[tool.setuptools]
packages = ["mdconvert"]
